Bug 407619 - Impossible to change the wallpaper immediately after changing the layout setting
Summary: Impossible to change the wallpaper immediately after changing the layout setting
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Image & Slideshow wallpaper plugins (other bugs)
Version First Reported In: master
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Sebastian Kügler
URL:
Keywords: qt6, regression
: 427156 (view as bug list)
Depends on: 454597
Blocks: 454595
  Show dependency treegraph
 
Reported: 2019-05-16 21:36 UTC by Patrick Silva
Modified: 2023-08-19 01:52 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2019-05-16 21:36:44 UTC
STEPS TO REPRODUCE
(Wallpaper type is "Image")
1. right click on desktop, select "Configure desktop..."
2. change the layout setting and click on "Ok" button
3. select another wallpaper (notice that "Apply" button is still greyed out)
4. click 'Ok" button

OBSERVED RESULT
the wallpaper selected in the step 3 was not applied

EXPECTED RESULT
the wallpaper selected in the step 3 is applied

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.15.90
KDE Frameworks Version: 5.58.0
Qt Version: 5.13.0 beta3
Comment 1 Nate Graham 2019-05-21 20:14:08 UTC
Confirmed.
Comment 2 Nate Graham 2020-10-05 20:18:33 UTC
*** Bug 427156 has been marked as a duplicate of this bug. ***
Comment 3 Karl Ove Hufthammer 2022-05-05 18:20:49 UTC
Still valid in Plasma 5.24.4. After changing to a new layout and selecting a new wallpaper, the ‘Apply’ button is greyed out and can’t be clicked, while the ‘OK’ button closes the dialogue but doesn’t change the wallpaper.
Comment 4 Bug Janitor Service 2022-05-30 12:33:24 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/964
Comment 5 Fushan Wen 2022-06-14 11:32:08 UTC
Git commit 29c79a56fd0f79e0b9b35130b2ea899b5d26ce7c by Fushan Wen.
Committed on 14/06/2022 at 11:29.
Pushed by fusionfuture into branch 'Plasma/5.24'.

desktoppackage: fix unable to apply wallpaper settings after switching layout

`wallpaperGraphicsObject`, `wallpaper` or `wallpaperInterface`
is not set before calling `ContainmentInterface::loadWallpaper()`, so wait
until `wallpaperInterfaceChanged` signal is emitted. At that time
`applyWallpaper()` will call `syncWallpaperObjects()` to update
`wallpaperConfiguration`.
FIXED-IN: 5.24.6


(cherry picked from commit 379d162a126f504ebdbb66b68852e7d850dd51b0)

M  +23   -3    desktoppackage/contents/configuration/ConfigurationContainmentAppearance.qml

https://invent.kde.org/plasma/plasma-desktop/commit/29c79a56fd0f79e0b9b35130b2ea899b5d26ce7c
Comment 6 Fushan Wen 2022-06-22 08:03:26 UTC
Git commit 50f82b2d47d016d750c13f7c2abfe20dbfbd9837 by Fushan Wen.
Committed on 22/06/2022 at 08:02.
Pushed by fusionfuture into branch 'master'.

desktoppackage: avoid loading wallpaper settings again when the plugin is changed

Only reload wallpaper settings when `wallpaperConfiguration` is invalid.

M  +3    -7    desktoppackage/contents/configuration/ConfigurationContainmentAppearance.qml

https://invent.kde.org/plasma/plasma-desktop/commit/50f82b2d47d016d750c13f7c2abfe20dbfbd9837
Comment 7 Fushan Wen 2022-06-22 08:03:40 UTC
Git commit f3867eb3d24e3cc4d03faf1d2ce2e8e8e0ab578c by Fushan Wen.
Committed on 22/06/2022 at 08:03.
Pushed by fusionfuture into branch 'Plasma/5.25'.

desktoppackage: avoid loading wallpaper settings again when the plugin is changed

Only reload wallpaper settings when `wallpaperConfiguration` is invalid.


(cherry picked from commit 50f82b2d47d016d750c13f7c2abfe20dbfbd9837)

M  +3    -7    desktoppackage/contents/configuration/ConfigurationContainmentAppearance.qml

https://invent.kde.org/plasma/plasma-desktop/commit/f3867eb3d24e3cc4d03faf1d2ce2e8e8e0ab578c
Comment 8 Fushan Wen 2022-06-24 09:45:36 UTC
Git commit 988fe02de567b972a941bcb3d785cae5423c5e1d by Fushan Wen.
Committed on 24/06/2022 at 09:45.
Pushed by fusionfuture into branch 'Plasma/5.24'.

desktoppackage: avoid loading wallpaper settings again when the plugin is changed

Only reload wallpaper settings when `wallpaperConfiguration` is invalid.


(cherry picked from commit 50f82b2d47d016d750c13f7c2abfe20dbfbd9837)

M  +3    -7    desktoppackage/contents/configuration/ConfigurationContainmentAppearance.qml

https://invent.kde.org/plasma/plasma-desktop/commit/988fe02de567b972a941bcb3d785cae5423c5e1d
Comment 9 Bug Janitor Service 2023-08-17 10:13:17 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/plasma-framework/-/merge_requests/853
Comment 10 Bug Janitor Service 2023-08-17 10:13:19 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3191
Comment 11 Bug Janitor Service 2023-08-17 10:18:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/1669
Comment 12 Fushan Wen 2023-08-17 16:15:32 UTC
Git commit dd3204eda894bebeae3c0a39c34b5745e44ac2df by Fushan Wen.
Committed on 17/08/2023 at 11:56.
Pushed by fusionfuture into branch 'master'.

containment: emit signal when wallpaperGraphicsObject changes

M  +14   -0    src/plasma/containment.cpp
M  +12   -0    src/plasma/containment.h
M  +1    -0    src/plasma/private/containment_p.h

https://invent.kde.org/frameworks/plasma-framework/-/commit/dd3204eda894bebeae3c0a39c34b5745e44ac2df
Comment 13 Fushan Wen 2023-08-17 16:16:01 UTC
Git commit d500c0d4a85d81baef50e67f3c364bf9dc66ae7c by Fushan Wen.
Committed on 17/08/2023 at 18:15.
Pushed by fusionfuture into branch 'master'.

DesktopView: reopen containment config dialog after wallpaper item is loaded

Until wallpaperGraphicsObject is a valid object, the config dialog can't
properly load any wallpaper config view.

M  +9    -1    shell/desktopview.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/d500c0d4a85d81baef50e67f3c364bf9dc66ae7c
Comment 14 Fushan Wen 2023-08-17 16:16:59 UTC
Git commit ed239bcef7650596ae23b1eb128b145d15d6ebb2 by Fushan Wen.
Committed on 17/08/2023 at 12:02.
Pushed by fusionfuture into branch 'master'.

desktoppackage: remove invalid connection

The connection doesn't work since the wallpaperitem change

M  +1    -12   desktoppackage/contents/configuration/ConfigurationContainmentAppearance.qml

https://invent.kde.org/plasma/plasma-desktop/-/commit/ed239bcef7650596ae23b1eb128b145d15d6ebb2