DesktopView: reopen containment config dialog after wallpaper item is loaded

Until wallpaperGraphicsObject is a valid object, the config dialog can't
properly load any wallpaper config view.

BUG: 407619